# databricks_cost_optimizer

./: .env.example  .gitignore  README.md  databricks.yml  pyproject.toml
docs/: ARCHITECTURE.md
notebooks/: run_optimizer.py
resources/: cost_dashboard.lvdash.json  cost_dashboard.yml  optimizer_job.yml
src/dbx_cost_optimizer/: __init__.py  cli.py  config.py  context_store.py  databricks_cfg.py  docs_catalog.py  llm.py  models.py  orchestrator.py  registry.py  workspace.py
src/dbx_cost_optimizer/agents/: __init__.py  alert.py  base.py  compute.py  dashboard.py  forecast.py  genie.py  job_query.py  pdf_report.py  report.py  sink.py  storage.py  telemetry.py
src/dbx_cost_optimizer/connectors/: __init__.py  base.py  databricks_sql.py  mock.py  spark.py
src/dbx_cost_optimizer/notifications/: __init__.py  base.py  email.py
src/dbx_cost_optimizer/skills/: __init__.py  alerting_and_delivery.md  compute_rightsizing.md  job_configuration.md  query_tuning.md  storage_maintenance.md
src/dbx_cost_optimizer/sql/: __init__.py  queries.py
src/dbx_cost_optimizer/tools/: __init__.py  rightsizing.py  savings.py
tests/: test_smoke.py
